# Lagerverwaltung_Vorlage

./: .flake8  .gitignore  .pylintrc  CHECKLISTE.md  GIT_WORKFLOW.md  INDEX.md  LEHRERINFO.md  README.md  TEMPLATE_INFO.md  pyproject.toml
docs/: DATACLASS_ERKLAERT.md  architecture.md  changelog_template.md  contracts.md  known_issues.md  projektmanagement.md  retrospective.md  tests.md
src/: __init__.py
src/adapters/: __init__.py  report.py  repository.py
src/domain/: __init__.py  product.py  warehouse.py
src/ports/: __init__.py
src/reports/: __init__.py
src/services/: __init__.py
src/ui/: __init__.py
tests/: conftest.py
tests/integration/: test_integration.py
tests/unit/: test_domain.py
